--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
         <h1>Kalkulator BMI</h1>
     </header>
 
-    <main></main>
+    <main>
+        <article>
+            <p>awawawawawawawaawaawawawawawawawa</p>
+        </article>
+
+        <form></form>
+
+        <article></article>
+
+        <section></section>
+    </main>
 
     <footer></footer>
 </body>
