--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     </header>
 
     <main>
-        <article>
-            <p>awawawawawawawaawaawawawawawawawa</p>
-        </article>
+        <article></article>
 
         <form></form>
 
