--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </header>
 
     <main>
-        <article></article>
+        <article>
+            <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        </article>
 
         <form></form>
 
