--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <main>
         <article>
-            <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+            <p>Berat badan ideal adalah impian semua orang. Tidak hanya bentuk tubuh yang menunjang
+               penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu?
+               Yuk, hitung sekarang di kalkulator BMI.</p>
         </article>
 
         <form></form>
