--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
                Yuk, hitung sekarang di kalkulator BMI.</p>
         </article>
 
-        <form></form>
+        <form>
+            <div>
+                <h3>jenis Kelamin</h3>
+                <input type="radio">
+            </div>
+        </form>
 
         <article></article>
 
